syntax = "proto3";

package helloword;

option go_package = "proto;helloword";

service Greeter {
  rpc SayHello(HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
